--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header></header>
     <main>
         <h1>Eleve seu negócio digital a outro nível <strong class="primeiro-destaque">com um Front-end de qualidade!</strong></h1>
-        <p>Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em <strong class="segundo-destaque">React, HTML e CSS.</strong> Ajudo pequenos
+        <p>Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos
             negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <a href="https://github.com/viniciusdamascenosouza">GitHub:</a>
             <img src="./img/Imagem.png" alt="">
