--- a/index.html
+++ b/index.html
@@ -12,14 +12,22 @@
 
 <body>
     <header></header>
-    <main>
-        <h1>Eleve seu negócio digital a outro nível <strong class="primeiro-destaque">com um Front-end de qualidade!</strong></h1>
-        <p>Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos
-            negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-            <a href="https://github.com/viniciusdamascenosouza">GitHub:</a>
-            <img src="./img/Imagem.png" alt="">
+    <main class="apresentacao">
+        <div class="apresentacao-parte-1">
+            <h1>Eleve seu negócio digital a outro nível com um <strong class="primeiro-destaque">Front-end de
+                    qualidade!</strong></h1>
+            <p>
+                Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos
+                negócios e designers a colocarem em prática boas ideias. Vamos conversar?
+            </p>
+            <a href="">Instagram</a>
+            <a href="">GitHub</a>
+        </div>
+        <div>
+            <img src="./img/Imagem.png" alt="Mulher programando">
+        </div>
     </main>
     <footer></footer>
 </body>
 
-</html> 
+</html>
