--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <a href="">GitHub</a>
         </div>
         <div>
-            <img src="./img/Imagem.png" alt="Mulher programando">
+            <img src="./img/Imagem.png" alt="Mulher programando" class="img-1">
         </div>
     </main>
     <footer></footer>
