--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
 <body>
     <header></header>
     <main class="apresentacao">
-        <div class="apresentacao-parte-1">
-            <h1>Eleve seu negócio digital a outro nível com um <strong class="primeiro-destaque">Front-end de
+        <section class="apresentacao-conteudo">
+            <h1 class="apresentacao-conteudo-titulo">Eleve seu negócio digital a outro nível com um <strong class="primeiro-destaque">Front-end de
                     qualidade!</strong></h1>
-            <p>
+            <p class="apresentacao-conteudo-texto">
                 Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos
                 negócios e designers a colocarem em prática boas ideias. Vamos conversar?
             </p>
-            <a href="">Instagram</a>
-            <a href="">GitHub</a>
-        </div>
-        <div>
-            <img src="./img/Imagem.png" alt="Mulher programando" class="img-1">
-        </div>
+            <div class="botoes">
+                <a href="" class="botao">Instagram</a>
+                <a href="" class="botao">GitHub</a>
+            </div>
+        </section>
+        <img src="./img/Imagem.png" alt="Mulher programando" class="img-1">
     </main>
     <footer></footer>
 </body>
