--- a/index.html
+++ b/index.html
@@ -21,8 +21,19 @@
                 negócios e designers a colocarem em prática boas ideias. Vamos conversar?
             </p>
             <div class="botoes">
-                <a href="" class="botao">Instagram</a>
-                <a href="" class="botao">GitHub</a>
+                <h2 class="titulo-redes">Acesse minhas redes:</h2>
+                <div class="botao">
+                    <img src="./img/Logo Github.png" alt="">
+                    <a href="">GitHub</a>
+                </div>
+                <div class="botao">
+                    <img src="./img/Logo linkedin.png" alt="">
+                    <a href="">Linkedin</a>
+                </div>
+                <div class="botao">
+                    <img src="./img/Logo Twitch.png" alt="">
+                    <a href="">Twitch</a>
+                </div>
             </div>
         </section>
         <img src="./img/Imagem.png" alt="Mulher programando" class="img-1">
