--- a/index.html
+++ b/index.html
@@ -24,15 +24,15 @@
                 <h2 class="titulo-redes">Acesse minhas redes:</h2>
                 <div class="botao">
                     <img src="./img/Logo Github.png" alt="">
-                    <a href="">GitHub</a>
+                    <a href="" class="titulo-botao">GitHub</a>
                 </div>
                 <div class="botao">
                     <img src="./img/Logo linkedin.png" alt="">
-                    <a href="">Linkedin</a>
+                    <a href="" class="titulo-botao">Linkedin</a>
                 </div>
                 <div class="botao">
                     <img src="./img/Logo Twitch.png" alt="">
-                    <a href="">Twitch</a>
+                    <a href="" class="titulo-botao">Twitch</a>
                 </div>
             </div>
         </section>
