--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
         </section>
         <img src="./img/Imagem.png" alt="Mulher programando" class="img-1">
     </main>
-    <footer></footer>
+    <footer>
+        <div class="rodape">
+            <p>Desenvolvido por Alura.</p>
+        </div>
+    </footer>
 </body>
 
 </html>
