--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 </head>
 
 <body>
-    <header></header>
+    <header>
+        <div class="menu-cabecalho">
+            <nav class="link-menu-cabecalho">Home</nav>
+            <nav class="link-menu-cabecalho">Sobre mim</nav>
+        </div>
+    </header>
     <main class="apresentacao">
         <section class="apresentacao-conteudo">
             <h1 class="apresentacao-conteudo-titulo">Eleve seu negócio digital a outro nível com um <strong class="primeiro-destaque">Front-end de
