link para navegar entra páginas

--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
 <body>
     <header>
         <div class="menu-cabecalho">
-            <nav class="link-menu-cabecalho">Home</nav>
-            <nav class="link-menu-cabecalho">Sobre mim</nav>
+                <a href="index.html" class="link-menu-cabecalho">Home</a>
+                <a href="./about.html" class="link-menu-cabecalho">Sobre mim</a>
+            </nav>
         </div>
     </header>
     <main class="apresentacao">
