Página sobre mim

--- a/about.html
+++ b/about.html
@@ -6,17 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre mim</title>
+
+    <link rel="stylesheet" href="./sobremim.css">
 </head>
 
 <body>
-    <h1>Sobre mim</h1>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo molestiae nesciunt eligendi? Quia labore similique
-        molestias fugiat, excepturi rerum dignissimos. Libero totam aliquam rem dignissimos nulla asperiores inventore
-        ratione expedita! Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe aliquam, dolorem incidunt
-        doloremque impedit nobis excepturi harum maxime fuga delectus. Qui consequatur corrupti quidem commodi. Officia
-        amet accusamus dolor explicabo. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur expedita
-        accusamus nulla, sapiente sunt itaque doloremque possimus harum aliquid fugit mollitia, in quam. Accusantium
-        esse, repellat est fugit odio tempore.</p>
+    <header>
+        <nav class="menu-cabecalho">
+            <a href="" class="link-menu-cabecalho">Home</a>
+            <a href="" class="link-menu-cabecalho">Sobre mim</a>
+        </nav>
+    </header>
+    <main class="apresentacao">
+        <section class="apresentacao-secao">
+            <h1 class="titulo-sobre-mim">Sobre mim</h1>
+            <p class="texto-apresentacao">
+                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum
+                deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non
+                provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
+            </p>
+                <br>
+            <p class="texto-apresentacao">
+                Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
+                eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas
+                assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum
+                necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum
+                rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut
+                perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat
+                cupidatat non.
+            </p>
+        </section>
+        <img src="./img/Imagem.png" alt="" class="imagem-sobre-mim">
+    </main>
+    <footer class="rodape">Desenvolvido por Alura.</footer>
 </body>
 
 </html>
