--- a/index.html
+++ b/index.html
@@ -12,11 +12,10 @@
 
 <body>
     <header>
-        <div class="menu-cabecalho">
+        <nav class="menu-cabecalho">
                 <a href="index.html" class="link-menu-cabecalho">Home</a>
                 <a href="./about.html" class="link-menu-cabecalho">Sobre mim</a>
-            </nav>
-        </div>
+        </nav>
     </header>
     <main class="apresentacao">
         <section class="apresentacao-conteudo">
