links sobre nós

--- a/about.html
+++ b/about.html
@@ -13,8 +13,8 @@
 <body>
     <header>
         <nav class="menu-cabecalho">
-            <a href="" class="link-menu-cabecalho">Home</a>
-            <a href="" class="link-menu-cabecalho">Sobre mim</a>
+            <a href="./index.html" class="link-menu-cabecalho">Home</a>
+            <a href="./about.html" class="link-menu-cabecalho">Sobre mim</a>
         </nav>
     </header>
     <main class="apresentacao">
