mudando unidade de medida

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
                 cupidatat non.
             </p>
         </section>
-        <img src="./img/Imagem.png" alt="" class="imagem-sobre-mim">
+        <img src="./img/Imagem.png" alt="" class="img-01">
     </main>
     <footer class="rodape">Desenvolvido por Alura.</footer>
 </body>
